Fixed div jump, add superSquare, score, speed increasing

--- a/src/styles/basic/layout.scss
+++ b/src/styles/basic/layout.scss
@@ -3,6 +3,7 @@ body {
   //display: flex;
   //flex-direction: column;
   min-height: 100vh;
+  background-color: $transparentGrey;
 }
 
 .wrapper {
@@ -16,6 +17,10 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.header-content {
+  display:flex;
 }
 
 input,
