--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,13 +3,24 @@
 @import "./basic/layout.scss";
 
 .canvas {
-  background-color: $grey;
+  background-color: $lightgray;
   width: 100%;
   height: 300px;
   overflow: hidden;
+  position: relative;
 }
 
 @keyframes square-fall {
   from { top: 0%; }
-  to { top: 100% }
+  to { top: 100%; }
+}
+
+.superSquare:before {
+  content: "\2B50";
+}
+
+.superSquare {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
